--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -8,8 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build HTML
-      uses: docker://pandoc/core:2.9
-      uses: ammaraskar/sphinx-action@0.4
+      uses: [ammaraskar/sphinx-action@0.4, docker://pandoc/core:2.9]
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
       with:
