--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -7,8 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Install pandoc
+        run: |
+          sudo apt-get install --no-install-recommends pandoc
+    - name: Install Python package
+        run: |
+          python3 -m pip install .
+    - name: Install docs dependencies
+        run: |
+          python3 -m pip install -r doc/requirements.txt
     - name: Build HTML
-      uses: [ammaraskar/sphinx-action@0.4, docker://pandoc/core:2.9]
+      uses: ammaraskar/sphinx-action@0.4
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
       with:
