--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -7,8 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Install pandoc
-        run: sudo apt-get install --no-install-recommends pandoc
+        run: |
+          sudo apt-get install --no-install-recommends pandoc
     - name: Install Python package
         run: python3 -m pip install .
     - name: Install docs dependencies
