--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,30 +1,55 @@
-name: Sphinx build
-
-on: push
-
+name: Build Docs with Sphinx
+on: [push, pull_request]
 jobs:
-  build:
+  docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Install pandoc
-        run: sudo apt-get install --no-install-recommends pandoc
-    - name: Install Python package
-        run: python3 -m pip install .
-    - name: Install docs dependencies
-        run: python3 -m pip install -r doc/requirements.txt
-    - name: Build HTML
-      uses: ammaraskar/sphinx-action@0.4
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: html-docs
-        path: docs/build/html/
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: docs/build/html
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Install pandoc
+        run: |
+          sudo apt-get install --no-install-recommends pandoc
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: Double-check Python version
+        run: |
+          python3 --version
+      - name: Install Python package
+        run: |
+          python3 -m pip install .
+      - name: Install docs dependencies
+        run: |
+          python3 -m pip install -r doc/requirements.txt
+      - name: Build HTML
+        run: |
+          python3 -m sphinx -W --keep-going --color doc/ _build/html/ -d _build/doctrees/ -b html
+      - name: Upload HTML
+        uses: actions/upload-artifact@v2
+        with:
+          name: HTML
+          path: _build/html/
+      - name: Build LaTeX sources
+        run: |
+          python3 -m sphinx -W --keep-going --color doc/ _build/latex/ -d _build/doctrees/ -b latex
+      - name: Run LaTeX
+        uses: dante-ev/latex-action@master
+        with:
+          working_directory: _build/latex
+          root_file: splines.tex
+      - name: Upload PDF
+        uses: actions/upload-artifact@v2
+        with:
+          name: PDF
+          path: _build/latex/splines.pdf
+      - name: Check links
+        run: |
+          python3 -m sphinx -W --keep-going --color doc/ _build/linkcheck/ -d _build/doctrees/ -b linkcheck
+      - name: Upload linkcheck results
+        uses: actions/upload-artifact@v2
+        if: ${{ success() || failure() }}
+        with:
+          name: linkcheck
+          path: _build/linkcheck/output.*
