--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -24,8 +24,11 @@ jobs:
         run: |
           python3 -m pip install -r docs/requirements.txt
       - name: Build HTML
-        run: |
-          python3 -m sphinx -W --keep-going --color doc/ _build/html/ -d _build/doctrees/ -b html
+        uses: ammaraskar/sphinx-action@0.4
+        with:
+          docs-folder: "docs/"
+          pre-build-command: "sudo apt-get install --no-install-recommends pandoc"
+          build-command: "sphinx-build -b html . build/html"
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
