--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           docs-folder: "docs/"
           pre-build-command: "sudo apt-get install --no-install-recommends pandoc"
-          build-command: "sphinx-build -b html . build/html"
+          build-command: "sphinx-build -b html ./source ./build/html"
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
