--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,23 +1,23 @@
 name: Build Docs with Sphinx
 on: [push, pull_request]
 jobs:
-  docs:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Install pandoc
-        run: |
-          sudo apt-get install --no-install-recommends pandoc
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.10"
-      - name: Double-check Python version
-        run: |
-          python3 --version
-      - name: Install Python package
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9.7
+    - name: Install dependencies
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        $CONDA/bin/conda env update --file environment.yml --name base
+        $CONDA/bin/conda install -c conda-forge sphinx
+        $CONDA/bin/conda install -c conda-forge pandoc
+        $CONDA/bin/conda install -c conda-forge nbsphinx
+        $CONDA/bin/conda install -c conda-forge ipykernel
+    - name: Install Python package
         run: |
           python3 -m pip install .
       - name: Install docs dependencies
@@ -40,3 +40,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/build/html
+  
