--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -17,7 +17,7 @@ jobs:
         python -m pip install -r docs/requirements.txt
     - name: Build HTML
       run: |
-        python -m sphinx -W --keep-going --color docs/ _build/html/
+        python -m sphinx -W --keep-going --color docs/source docs/build/html/
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
       with:
