--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Install docs dependencies
       run: |
         python -m pip install -r docs/requirements.txt
+    - name: Install python package
+      run: |
+        python -m pip install .
     - name: Build HTML
       run: |
         python -m sphinx -W --keep-going --color docs/source docs/build/html/
