--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,3 +4,11 @@ pandoc
 nbsphinx
 ipython
 ipykernel
+pyvista==0.33.3
+vtk==9.1.0
+tetgen==0.6.0
+pymeshfix==0.15.0
+appdirs==1.4.4
+Pillow==9.0.1
+scikit-learn==1.0.2
+scipy==1.8.0
