--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -12,3 +12,7 @@ appdirs==1.4.4
 Pillow==9.0.1
 scikit-learn==1.0.2
 scipy==1.8.0
+widgetsnbextension==3.5.2
+pythreejs==2.3.0
+rich==12.0.1
+python-dateutil==2.8.2
