--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -8,10 +8,11 @@ jobs:
     - name: Install pandoc
       run: |
         sudo apt-get install -y --no-install-recommends pandoc
-    - name: Set up Python 3.9.7
-      uses: actions/setup-python@v2
+    - name: Set up Python and Conda
+      - uses: s-weigand/setup-conda@v1
       with:
         python-version: 3.9.7
+        activate-conda: true
     - name: Install docs dependencies
       run: |
         python -m pip install -r docs/requirements.txt
