--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,7 +1,7 @@
 name: Build Docs with Sphinx
 on: [push, pull_request]
 jobs:
-  build-linux:
+  docs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -9,12 +9,15 @@ jobs:
       run: |
         sudo apt-get install -y --no-install-recommends pandoc
     - name: Set up Python 3.9.7
-      uses: actions/setup-python@v2
+      uses: s-weigand/setup-conda@v1
       with:
         python-version: 3.9.7
+        activate-conda: True
     - name: Install docs dependencies
       run: |
         python -m pip install -r docs/requirements.txt
+        conda install -c conda-forge wildmeshing
+        conda install -c conda-forge ldrb
     - name: Install python package
       run: |
         python -m pip install .
