--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,9 +1,10 @@
 channels:
   - conda-forge
 dependencies:
-  - python>=3
+  - python==3.9.7
   - pandoc
   - ipykernel
   - pip
+  - libgcc
   - pip:
     - nbsphinx
